Disable other error prone checks